WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132931
[iOS][WK2] The top/bottom edges should not be sticky when restoring the scroll position from the dynamic size update history
https://bugs.webkit.org/show_bug.cgi?id=132931
Summary
[iOS][WK2] The top/bottom edges should not be sticky when restoring the scrol...
Benjamin Poulain
Reported
2014-05-14 17:05:39 PDT
[iOS][WK2] The top/bottom edges should not be sticky when restoring the scroll position from the dynamic size update history
Attachments
Patch
(4.15 KB, patch)
2014-05-14 17:12 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-05-14 17:12:43 PDT
Created
attachment 231473
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-14 17:32:58 PDT
Comment on
attachment 231473
[details]
Patch Clearing flags on attachment: 231473 Committed
r168880
: <
http://trac.webkit.org/changeset/168880
>
Benjamin Poulain
Comment 3
2014-05-14 17:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug